@@ -464,4 +464,4 @@ void CGUIButton::deserializeAttributes(io::IAttributes* in, io::SAttributeReadWr
 } // end namespace gui
 } // end namespace irr
 
-#endif _IRR_COMPILE_WITH_GUI_
+#endif // _IRR_COMPILE_WITH_GUI_
